--- a/contacts.html
+++ b/contacts.html
@@ -31,7 +31,7 @@
             <li><a href="digitalResources.html">Digital Resources</a></li>
             <li><a href="advisoryBoard.html">Advisory Board</a></li>
             <li><a href="contacts.html">Contact Us</a></li>
-            <li><a href="signUp.html" class="button primary">Sign Up</a></li>
+            <li><a href="drpcRecentChanges.html" class="button primary">Recent Changes</a></li>
         </ul>
     </nav>
     </header>
@@ -40,17 +40,25 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Contact Us</h2>
-							<p>Reach out to us for more information about The Digital Rhetorical Privacy Collective by filling out the form on this page! Or, if you are interested in submitting a reading list, assignment, or proposing an idea for the DRPC, please fill out the form.
-
-Facebook
-Twitter
+							<h2 class="icon solid fa-comment-dots" > Contact Us</h2>
+							<p>Reach out to us for more information about The Digital Rhetorical Privacy Collective by filling out the form on this page or if you are interested in submitting a reading list, assignment, or proposing an idea for the DRPC, please fill out the form!
+                                <p></p>
+                                <p1><b> Contact us on social media:</b> </p1>
+                            <p></p>
+                                <ul class="icons">
+						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
 </p>
 						</header>
 
 						<!-- Text -->
                         <section>
-								<h3>Form</h3>
+								<h3>Contact Form</h3>
 								<form method="post" action="#">
 									<div class="row gtr-uniform gtr-50">
 										<div class="col-6 col-12-xsmall">
@@ -62,10 +70,11 @@ Twitter
 										<div class="col-12">
 											<select name="category" id="category">
 												<option value="">- Category -</option>
-												<option value="1">Manufacturing</option>
-												<option value="1">Shipping</option>
-												<option value="1">Administration</option>
-												<option value="1">Human Resources</option>
+												<option value="1">More Info</option>
+												<option value="1">Submit Reading List</option>
+												<option value="1">Submit Assignment</option>
+												<option value="1">Proposing Idea for DRPC</option>
+                                                <option value="1">Other</option>
 											</select>
 										</div>
 										<div class="col-4 col-12-medium">
