--- a/drpcInTheField.html
+++ b/drpcInTheField.html
@@ -29,7 +29,7 @@
             <li><a href="digitalResources.html">Digital Resources</a></li>
             <li><a href="advisoryBoard.html">Advisory Board</a></li>
             <li><a href="contacts.html">Contact Us</a></li>
-            <li><a href="signUp.html" class="button primary">Sign Up</a></li>
+            <li><a href="drpcRecentChanges.html" class="button primary">Recent Changes</a></li>
         </ul>
     </nav>
     </header>
@@ -114,6 +114,8 @@
 																<h3><a href="#">Awards and Grants</a></h3>
 															</header>
 															<p><li>NCTE/CCCC Emergent Research Grant, (2022-2023). This award is funded up to $10 000 each for proposals by the CCCC. The principal investigator must belong to CCCC at the time of submission of hte proposal. The proposed projects are expected to last to two years, but can run for shorter periods of time. </li></p>
+                                                            <p><li> CPTSC Research Grant. DRPC Presidential GAR (grant-funded research assistant) was funded $1950 to the DRPC to further examine the design and transfer of technical communication skills related to digital privacy and surveillance in technical and scientific communication programs in Texas.</li></p>
+                                                            <p><li>TAMUC Presidential GAR Initiative: Funded. DRPC was awarded $16666 as this competitive award creates the opportunity for a graduate student researcher to work with the Digital Rhetorical Privacy Collective (drpcollective.com) to gain practical experience in grant writing, cultivating community partnerships, resource development and production, and digital presence management. </li></p>
 														</div>
 													</article>
 
@@ -126,7 +128,10 @@
 																<h3><a href="#">Presentations</a></h3>
 															</header>
 															<p><li> This presentation is by Johnson, Gavin P., Charles Woods, and Morgan Banville. (Feb. 17, 2023). The presentation is called: Teaching and learning about privacy and surveillance: Doing hope through the Digital Rhetorical Privacy Collective. It is by the Conference on College Composition and Communication in Chicago, IL.</li>
-                                                            <li>Presented by Woods, Charles, Gavin P. Johnson, Cecilia Shelton, and Noah Wason. (June 2023), this presentation is a hybrid resource for teaching and learning on privacy + surveillance: The Digital Rhetorical Privacy Collective. It <br> takes place in the <br>Computers and Writing Conference, Davis, CA.</li></p>
+                                                            <li>Presented by Woods, Charles, Gavin P. Johnson, Cecilia Shelton, and Noah Wason. (June 2023), this presentation is a hybrid resource for teaching and learning on privacy + surveillance: The Digital Rhetorical Privacy Collective. It <br> takes place in the <br>Computers and Writing Conference, Davis, CA.</li>
+                                                            <li> A Forthcoming publication by: Johnson, Gavin P., Banville, Morgan C. Wason, Noah, and Woods, Charles called The Privacy-Surveillance Continuum. Also contributing are Amber Buck, David T. Coad, Anuj Gupta, and Rich Shivener (Eds.). It is a part of the edited collection called: Digital Literacies and Human Connection. 
+ </li></p>
+                                                            
 														</div>
 													</article>
 
