--- a/drpcReadingLists.html
+++ b/drpcReadingLists.html
@@ -29,7 +29,7 @@
             <li><a href="digitalResources.html">Digital Resources</a></li>
             <li><a href="advisoryBoard.html">Advisory Board</a></li>
             <li><a href="contacts.html">Contact Us</a></li>
-            <li><a href="signUp.html" class="button primary">Sign Up</a></li>
+            <li><a href="drpcRecentChanges.html" class="button primary">Recent Changes</a></li>
         </ul>
     </nav>
     </header>
