--- a/contacts.html
+++ b/contacts.html
@@ -30,7 +30,7 @@
             <li><a href="drpcNewsletter.html" >Newsletter</a> </li> 
             <li><a href="digitalResources.html">Digital Resources</a></li>
             <li><a href="advisoryBoard.html">Advisory Board</a></li>
-            <li><a href="contacts.html">Contact Us</a></li>
+            <li class="active"><a href="contacts.html">Contact Us</a></li>
             <li><a href="drpcRecentChanges.html" class="button primary">Recent Changes</a></li>
         </ul>
     </nav>
