--- a/digitalResources.html
+++ b/digitalResources.html
@@ -26,7 +26,7 @@
             <li><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
             <li><a href="drpcBlog.html">Blog</a></li>
             <li><a href="drpcNewsletter.html" >Newsletter</a> </li> 
-            <li><a href="digitalResources.html">Digital Resources</a></li>
+            <li class="active"><a href="digitalResources.html">Digital Resources</a></li>
             <li><a href="advisoryBoard.html">Advisory Board</a></li>
             <li><a href="contacts.html">Contact Us</a></li>
             <li><a href="drpcRecentChanges.html" class="button primary">Recent Changes</a></li>
@@ -87,7 +87,7 @@
 										<h3>2.Privacy + Surveillance & Course Hero Podcast</h3>
                                         <p> Submitted by Dr. Charles Woods</p>
 										<p>In this podcast, DRPC Advisory Board member Dr. Charles Woods chats with Dr. Lacy Hope from Utah Tech University and Dr. Brenna Clarke Gray from Thompson Rivers University about issues related to privacy and surveillance on Course Hero. According to their website, Course Hero is an online learning platform for course-specific study resources that supports students on their unique learning journey as they seek help and resources to better understand their coursework, prepare for exams, learn and remember.</p>
-                                        <a href="#" class="image"><img src="images/resource1.JPG" alt="" height = 300 width=300/></a>
+                                        <a href="#" class="image"><img src="images/resource1.JPG" alt="PrivacyAndSurveillancePodcast" height = 300 width=300/></a>
                                         <p></p>
                                         <p> Preview in PDF of Transcript: </p>
                                         
