--- a/drpcInTheField.html
+++ b/drpcInTheField.html
@@ -20,7 +20,7 @@
     <nav id="nav">
         <ul>
             <li id="logo"><a href="index.html"><span><img src="images/minilogo.jpg" alt="logo" /></span></a></li>
-            <li><a href="drpcInTheField.html">In the Field</a></li>
+            <li class = "active"><a href="drpcInTheField.html">In the Field</a></li>
             <li><a href="drpcTeachingResources.html">Teaching Resources</a></li>
             <li><a href= "drpcReadingLists.html">Reading Lists</a></li>
             <li><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
@@ -107,7 +107,7 @@
 
 												<!-- Excerpt -->
 													<article class="box2 excerpt">
-														<a href="#" class="image left"><img src="images/award.jpeg" alt="" /></a>
+														<a href="#" class="image left"><img src="images/award.jpeg" alt="Awards and Grants" /></a>
 														<div>
 															<header>
 																<!--<span class="date">01</span>-->
@@ -121,7 +121,7 @@
 
 												<!-- Excerpt -->
 													<article class="box2 excerpt">
-														<a href="#" class="image right"><img src="images/slide.jpg" alt="" height=275 /></a>
+														<a href="#" class="image right"><img src="images/slide.jpg" alt="Presentations" height=275 /></a>
 														<div>
 															<header>
 																<!--<span class="date">01</span>-->
@@ -137,7 +137,7 @@
 
 												<!-- Excerpt -->
 													<article class="box2 excerpt">
-														<a href="#" class="image left"><img src="images/presentation.jpg" alt="" height=275 /></a>
+														<a href="#" class="image left"><img src="images/presentation.jpg" alt="Links" height=275 /></a>
 														<div>
 															<header>
 																<!--<span class="date">01</span>-->
