--- a/drpcNewsletter.html
+++ b/drpcNewsletter.html
@@ -171,12 +171,12 @@
 											</tr>
 											<tr id="myMar">
                                                 <td>March</td>
-												<td>No Newsletter found for this month</td>
+												<td>No Newsletter published this month</td>
 												<td></td>
 											</tr>
 											<tr id="myApr">
 												<td>April</td>
-												<td>No Newsletter found for this month</td>
+												<td>No Newsletter published this month</td>
 												<td></td>
 											</tr>
 											<tr id="myMay">
@@ -191,7 +191,7 @@
 											</tr>
                                             <tr id="myJul">
                                                 <td>July</td>
-												<td>No Newsletter found for this month</td>
+												<td>No Newsletter published this month</td>
 												<td></td>
 											</tr>
                                             <tr id="myAug">
@@ -211,7 +211,7 @@
 											</tr>
                                             <tr id="myNov">
                                                 <td>November</td>
-												<td>No Newsletter found for this month</td>
+												<td>No Newsletter published this month</td>
 												<td></td>
 											</tr>
                                             <tr id="myDec">
