--- a/drpcUsingResources.html
+++ b/drpcUsingResources.html
@@ -23,7 +23,7 @@
             <li><a href="drpcInTheField.html">In the Field</a></li>
             <li><a href="drpcTeachingResources.html">Teaching Resources</a></li>
             <li><a href= "drpcReadingLists.html">Reading Lists</a></li>
-            <li><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
+            <li class="active"><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
             <li><a href="drpcBlog.html">Blog</a></li>
             <li><a href="drpcNewsletter.html" >Newsletter</a> </li> 
             <li><a href="digitalResources.html">Digital Resources</a></li>
@@ -40,7 +40,7 @@
 							<section>
 								<h2 class="icon fa-images"> Using DRPC Resources</h2>
                                  
-                                <span><img src="images/digitalResource.jpeg" alt="logo" height=175/></span>
+                                <span><img src="images/digitalResource.jpeg" alt="digitalResources" height=175/></span>
                                 <p></p>
 								<p3>One of the goals of the DRPC is to create resources  that intsructors can use or adapt to, in order to talk about digital privacy in their classrooms. This section of the DRPC website provides information on how to cite DRPC resources that you use, and how to list them on your CV or resume. It also lists any adaptations and other course materials from instructors that used DRPC resources in their writing classrooms. Do you use DRPC resources in your classroom? Please reach out to us and tell us how you used them via our Contact page! </p3>
                                 <p></p>
