--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="header">
     <nav id="nav">
         <ul>
-            <li id="logo"><a href="index.html"><span><img src="images/minilogo.jpg" alt="logo" /></span></a></li>
+            <li id="logo"><a href="index.html"><span><img src="images/minilogo.jpg" alt="mini logo" /></span></a></li>
             <!--li><a href="index.html">Home</a></li-->
             <li><a href="drpcInTheField.html">In the Field</a></li>
             <li><a href="drpcTeachingResources.html">Teaching Resources</a></li>
@@ -40,14 +40,14 @@
 					<div class="content">
 						<header>
                             <p></p>
-                            <h2 style="text-align:left;">DRPC - Digital Rhetorical Podcast Collective</h2>
+                            <h2 style="text-align:left;">DRPC - Digital Rhetorical Privacy Collective</h2>
                             <p style="text-align:left;">The Digital Rhetorical Privacy Collective is a team that approaches studying, privacy, <br> and surveillance within rhetoric, composition, and technical communication.<br>
 							The goals and mission of the organization is to collect and redistribute academic <br> teaching resources and discuss about educational topics for our audience.<br> 
 							We won the CCCC Emerging Researcher Award in 2023. <br> In 2024, we are planning to continue expanding our resources to the public.</p>
 							<p><br/>
 							</p>
 						</header>
-						<span class="image left"><img src="images/logo.jpg" alt="" /></span>
+						<span class="image left"><img src="images/logo.jpg" alt="logo" /></span>
                         <p><br></p>
                         <!--span><img src="images/DigitalRhetoric.jpg" alt="logo" class="centerpic" /></span-->
 					</div>
@@ -56,7 +56,7 @@
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/DigitalRhetoric.jpg" height=200 alt="" /></span>
+					<span class="image fit main"><img src="images/DigitalRhetoric.jpg" height=200 alt="digital banner" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
@@ -81,7 +81,7 @@
 </p>
 								</div>
 								<div class="col-4 col-12-medium">
-                                   <span><img src="images/poster5.jpg" alt="logo" height = 400/></span>
+                                   <span><img src="images/poster5.jpg" alt="poster" height = 400/></span>
 								</div>
 							</div>
 						</div>
@@ -91,7 +91,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/poster3.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/poster3.jpg" alt="poster" /></span>
 					<div class="content">
 						<header>
 							<h3> “Beyond the Panopticon: A Surveillance Student Project Showcase“</h3>
@@ -110,7 +110,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/poster2.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/poster2.jpg" alt="poster" /></span>
 					<div class="content">
 						<header>
                             <h4>Privacy, IP, LBTQIA+ Communities, and the Future of Free Inquiry on College Campuses: TAMUC Waters Library Workshop Series”</h4>
@@ -140,7 +140,7 @@
 										<section>
 											<h3>Thursday, January 25, 2024: “Black Feminism, Reproductive Justice, and Digital Surveillance</h3>
                                             <p>4:30pm-5:30pm EST – Tawes Building Room 2115 at UMD and Zoom</p>
-                                            <span><img src="images/poster4.jpg" alt="logo" height=300 /></span>
+                                            <span><img src="images/poster4.jpg" alt="poster" height=300 /></span>
 										</section>
 									</section>
 
@@ -173,7 +173,7 @@
 										<section>
 											<h3>Friday, January 26, 2024: “Keynote Session: Privacy-Surveillance Rhetorics</h3>
 											<p>3:30pm-5:00pm EST – Zoom</p>
-                                             <span><img src="images/poster1.png" alt="logo" height=300 /></span>
+                                             <span><img src="images/poster1.png" alt="poster" height=300 /></span>
 										</section>
 									</section>
 
