--- a/drpcInTheField.html
+++ b/drpcInTheField.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Left Sidebar - Landed by HTML5 UP</title>
+        <title>Landed by Digital Rhetorical Privacy Collective</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,84 +15,30 @@
 	<body class="is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header -->
-			<header id="header">
+    <!-- Header -->
+    <header id="header">
     <nav id="nav">
         <ul>
-            <li id="logo"><a href="index.html"><span><img src="images/minilogo.jpg" alt="logo" /></span></a></li>
-            <li class = "active"><a href="drpcInTheField.html">In the Field</a></li>
-            <li><a href="drpcTeachingResources.html">Teaching Resources</a></li>
-            <li><a href= "drpcReadingLists.html">Reading Lists</a></li>
-            <li><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
+            <li id="logo"><a href="index.html"><span><img src="images/minilogo.jpg" alt="mini logo" /></span></a></li>
+            <!--li><a href="index.html">Home</a></li-->
+            <li class="active"><a href="drpcInTheField.html">DRPC in the Field</a></li>
+            <li>
+                <a href="#">DRPC Resources</a>
+                <ul>
+                    <li><a href="drpcTeachingResources.html">Teaching Resources</a></li>
+                    <li><a href="digitalResources.html">Digital Resources</a></li>
+                    <li><a href="drpcReadingLists.html">Reading Lists</a></li>
+                    <li><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
+                </ul>
+            </li>
             <li><a href="drpcBlog.html">Blog</a></li>
             <li><a href="drpcNewsletter.html" >Newsletter</a> </li> 
-            <li><a href="digitalResources.html">Digital Resources</a></li>
             <li><a href="advisoryBoard.html">Advisory Board</a></li>
-            <li><a href="contacts.html">Contact Us</a></li>
+            <li><a href="drpcContacts.html">Contact Us</a></li>
             <li><a href="drpcRecentChanges.html" class="button primary">Recent Changes</a></li>
         </ul>
     </nav>
     </header>
-			<!-- Main 
-				<div id="main" class="wrapper style1">
-					<div class="container">
-						<header class="major">
-							<h2>DRPC In the Field</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
-						</header>
-						<div class="row gtr-150">
-							<div class="col-4 col-4-medium">
-
-								<!-- Sidebar 
-									<section id="sidebar">
-										<section>
-											<h3>Magna Feugiat</h3>
-											<p></p>
-											<footer>
-												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
-												</ul>
-											</footer>
-										</section>
-										<hr />
-										<section>
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet Lorem Tempus</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
-												</ul>
-											</footer>
-										</section>
-									</section>
-
-							</div>
-							<div class="col-8 col-12-medium imp-medium">
-
-								<!-- Content 
-									<section id="content">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<h3>Awards and Grants</h3>
-										<p>NCTE/CCCC Emergent Research Grant, 2022-2023.</p>
-										<h3>Presentations</h3>
-										<p>Johnson, Gavin P., Charles Woods, and Morgan Banville. (Feb. 17, 2023). Teaching and learning about privacy and surveillance: Doing hope through the Digital Rhetorical Privacy Collective. Conference on College Composition and Communication, Chicago, IL.</p>
-                                        <p> Link to slides</p>
-                                        <p> Link to script</p>
-                                        <p> Woods, Charles, Gavin P. Johnson, Cecilia Shelton, and Noah Wason. (June 2023). A hybrid resource for teaching and learning about privacy and surveillance: The Digital Rhetorical Privacy Collective. Computers and Writing Conference, Davis, CA.</p>
-										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
-										</ul>
-									</section>
-
-							</div>
-						</div>
-					</div>
-				</div>-->
 
 				<div class="wrapper style1">
 						<div class="inner">
