--- a/drpcUsingResources.html
+++ b/drpcUsingResources.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Landed by HTML5 UP</title>
+		<title>Landed by Digital Rhetorical Privacy Collective</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,20 +15,26 @@
 	<body class="is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header -->
-				<header id="header">
+    <!-- Header -->
+    <header id="header">
     <nav id="nav">
         <ul>
-            <li id="logo"><a href="index.html"><span><img src="images/minilogo.jpg" alt="logo" /></span></a></li>
-            <li><a href="drpcInTheField.html">In the Field</a></li>
-            <li><a href="drpcTeachingResources.html">Teaching Resources</a></li>
-            <li><a href= "drpcReadingLists.html">Reading Lists</a></li>
-            <li class="active"><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
+            <li id="logo"><a href="index.html"><span><img src="images/minilogo.jpg" alt="mini logo" /></span></a></li>
+            <!--li><a href="index.html">Home</a></li-->
+            <li><a href="drpcInTheField.html">DRPC in the Field</a></li>
+            <li class="active">
+                <a href="#">DRPC Resources</a>
+                <ul>
+                    <li><a href="drpcTeachingResources.html">Teaching Resources</a></li>
+                    <li><a href="digitalResources.html">Digital Resources</a></li>
+                    <li><a href="drpcReadingLists.html">Reading Lists</a></li>
+                    <li class="active"><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
+                </ul>
+            </li>
             <li><a href="drpcBlog.html">Blog</a></li>
             <li><a href="drpcNewsletter.html" >Newsletter</a> </li> 
-            <li><a href="digitalResources.html">Digital Resources</a></li>
             <li><a href="advisoryBoard.html">Advisory Board</a></li>
-            <li><a href="contacts.html">Contact Us</a></li>
+            <li><a href="drpcContacts.html">Contact Us</a></li>
             <li><a href="drpcRecentChanges.html" class="button primary">Recent Changes</a></li>
         </ul>
     </nav>
