--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,7 @@
 -->
 <html>
 	<head>
-		<title>Elements - Landed by HTML5 UP</title>
+		<title>Landed by Digital Rhetorical Privacy Collective</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,18 +17,24 @@
 	<body class="is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header -->
-		<header id="header">
+     <!-- Header -->
+    <header id="header">
     <nav id="nav">
         <ul>
-            <li id="logo"><a href="index.html"><span><img src="images/minilogo.jpg" alt="logo" /></span></a></li>
-            <li><a href="drpcInTheField.html">In the Field</a></li>
-            <li><a href="drpcTeachingResources.html">Teaching Resources</a></li>
-            <li><a href= "drpcReadingLists.html">Reading Lists</a></li>
-            <li><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
+            <li id="logo"><a href="index.html"><span><img src="images/minilogo.jpg" alt="mini logo" /></span></a></li>
+            <!--li><a href="index.html">Home</a></li-->
+            <li><a href="drpcInTheField.html">DRPC in the Field</a></li>
+            <li>
+                <a href="#">DRPC Resources</a>
+                <ul>
+                    <li><a href="drpcTeachingResources.html">Teaching Resources</a></li>
+                    <li><a href="digitalResources.html">Digital Resources</a></li>
+                    <li><a href="drpcReadingLists.html">Reading Lists</a></li>
+                    <li><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
+                </ul>
+            </li>
             <li><a href="drpcBlog.html">Blog</a></li>
             <li><a href="drpcNewsletter.html" >Newsletter</a> </li> 
-            <li><a href="digitalResources.html">Digital Resources</a></li>
             <li><a href="advisoryBoard.html">Advisory Board</a></li>
             <li class="active"><a href="contacts.html">Contact Us</a></li>
             <li><a href="drpcRecentChanges.html" class="button primary">Recent Changes</a></li>
@@ -53,7 +59,7 @@
 						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
-</p>
+
 						</header>
 
 						<!-- Text -->
