--- a/drpcRecentChanges.html
+++ b/drpcRecentChanges.html
@@ -35,7 +35,7 @@
             <li><a href="drpcNewsletter.html" >Newsletter</a> </li> 
             <li><a href="advisoryBoard.html">Advisory Board</a></li>
             <li><a href="drpcContacts.html">Contact Us</a></li>
-            <li class="active"><a href="drpcRecentChanges.html" class="button primary">Recent Changes</a></li>
+            <li class="active"><a href="drpcRecentChanges.html" class="button primary xsmall">Recent Changes</a></li>
         </ul>
     </nav>
     </header>
