template changes and final updates

--- a/drpcPrivacyWeek.html
+++ b/drpcPrivacyWeek.html
@@ -16,7 +16,7 @@
 		<div id="page-wrapper">
 
     <!-- Header -->
-    <header id="header">
+   <header id="header">
     <nav id="nav">
         <ul>
            
@@ -51,25 +51,25 @@
     </header>
 
 			<!-- Banner -->
+            <header></header>
 				<section id="banner">
 					<div class="content">
 						<header>
                             <p></p>
-                            <h2 style="text-align:left;">DRPC - Digital Rhetorical Privacy Collective</h2>
-                            <p style="text-align:left;">The Digital Rhetorical Privacy Collective is a team that approaches studying, privacy, <br> and surveillance within rhetoric, composition, and technical communication.<br>
-							The goals and mission of the organization is to collect and redistribute academic <br> teaching resources and discuss about educational topics for our audience.<br> 
-							We won the CCCC Emerging Researcher Award in 2023. <br> In 2024, we are planning to continue expanding our resources to the public.</p>
+                            <h2 style="text-align:left;">DRPC Privacy Week</h2>
+                            <p style="text-align:left;">Here are the list of events the DRPC is holding during <br> Privacy Week<br>
+							</p>
 							<p><br/>
 							</p>
 						</header>
-						<span class="image left"><img src="images/logo.jpg" alt="logo" /></span>
+						<span class="image left"><img src="images/pic01.jpg" alt="logo" /></span>
                         <p><br></p>
                         <!--span><img src="images/DigitalRhetoric.jpg" alt="logo" class="centerpic" /></span-->
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- One 
+			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
 					<span class="image fit main"><img src="images/DigitalRhetoric.jpg" height=200 alt="digital banner" /></span>
 					<div class="content">
@@ -104,7 +104,7 @@
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- Two 
+			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
 					<span class="image fit main"><img src="images/poster3.jpg" alt="poster" /></span>
 					<div class="content">
@@ -123,7 +123,7 @@
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- Three 
+			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
 					<span class="image fit main bottom"><img src="images/poster2.jpg" alt="poster" /></span>
 					<div class="content">
@@ -142,7 +142,7 @@
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</section>
             
-         <!-- Four 
+         <!-- Four -->
 				<section id="four" class="wrapper style1">
 					<div class="container">
                         <header class="major">
@@ -150,7 +150,7 @@
 						<div class="row gtr-150">
 							<div class="col-4 col-12-medium">
 
-								<!-- Sidebar 
+								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
 											<h3>Thursday, January 25, 2024: “Black Feminism, Reproductive Justice, and Digital Surveillance</h3>
@@ -162,7 +162,7 @@
 							</div>
 							<div class="col-8 col-12-medium imp-medium">
 
-								<!-- Content 
+								<!-- Content -->
 									<section id="content">
 										<p>University of Maryland–College Park: The @UMDEnglish Language, Writing, & Rhetoric Event Series in collaboration with the Digical Rhetorical Privacy Collective present: “Reproduction & Medical Technology in the Age of ‘Crisis’” a talk by Dr. Mali Collins. This talk investigates the rhetoric of “crisis” as it pertains to the “Black Maternal Health Crisis”, and the ways ‘crisis” navigates as a bull horn to necessitate the over medicalization and mis-/and overuse of reproductive technologies on and for black birthing people. Thursday 1/25 4:30-5:30pm Tawes Building Rm 2115 and via Zoom.</p>
                                         <ul class="actions">
@@ -175,7 +175,7 @@
                     <a href="#five" class="goto-next scrolly">Next</a>
 				</section>
 
-             <!-- Five 
+             <!-- Five -->
 				<section id="five" class="wrapper style1">
 					<div class="container">
                         <header class="major">
@@ -183,7 +183,7 @@
 						<div class="row gtr-150">
 							<div class="col-4 col-12-medium">
 
-								<!-- Sidebar 
+								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
 											<h3>Friday, January 26, 2024: “Keynote Session: Privacy-Surveillance Rhetorics</h3>
@@ -195,7 +195,7 @@
 							</div>
 							<div class="col-8 col-12-medium imp-medium">
 
-								<!-- Content 
+								<!-- Content -->
 									<section id="content">
                                         <p> The Digital Rhetorical Privacy Collective Privacy Week 2024 presents a virtual event via Zoom that originates from Texas A&M University-Commerce. This keynote will feature Dr. Sarah Young, Lecturer and Researcher at Erasmus University Rotterdam, Dr. Maria Novotny, Assistant Professor in the English department at University of Wisconsin-Milwaukee, Dr. Christina Cedillo, Associate Professor of Writing and Rhetoric at the University of Houston-Clear Lake.</p>
                                         <ul class="actions">
@@ -227,9 +227,9 @@
 							</div>
 						</form>
 					</div>
-				</section>
-<!-- Table 
-  <section>
+				</section>-->
+<!-- Table -->
+							<section>
                                 <div id="six" class="wrapper style1">
                                 <div class="container">
 								<h3>Summary of Upcoming Events</h3>
